package dados;

public enum TipoGasto {
    COMIDA,
    EDUCACAO,
    LAZER,
    SAUDE,
    TRANSPORTE,
    OUTROS
}